Fixed the sidebar on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* outline: 2px solid red; */
+
 }
 
 body {
@@ -307,24 +309,23 @@ svg {
   list-style: none;
   z-index: 999;
   display: none;
-  gap: 1rem;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
 }
 
 .sidebar li {
-  margin-bottom: 1.2rem;
+  margin-bottom: 0.7rem;
   width: 100%;
 }
 
-.sidebar a {
-  width: inherit;
+.sidebar li a {
+  width: 100%;
+  justify-content: flex-start;
 }
 
 .sidebar a:hover {
-  background: rgb(32, 28, 28, 0.5);
-  width: 100%;
+  background: rgb(32, 28, 28, 0.9);
 }
 
 .menu-button {
@@ -408,6 +409,7 @@ ul h2 {
 
   .hero-section {
     margin-top: 10rem;
+    max-width: 400px;
   }
 
   #footer-section {
